web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-name-strict-body/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,13)
1|function fn(yield) { "use strict"; }
 |           ^
